# internal/http/fossil/apiUser.go
@@ -23,18 +23,12 @@ func (h *Handler) Register(c *gin.Context) {
 		return
 	}
 
-	err := h.UseCase.RegisterUser(user)
+	loginResponse, err := h.UseCase.RegisterUser(user)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-
-	users, err := h.UseCase.GetUsers()
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	c.JSON(http.StatusCreated, gin.H{"users": users})
+	c.JSON(http.StatusOK, gin.H{"access_token": loginResponse.AccessToken, "full_name": loginResponse.FullName})
 }
 
 // @BasePath /user/login
@@ -55,14 +49,12 @@ func (h *Handler) Login(c *gin.Context) {
 		return
 	}
 
-	tokenPair, err := h.UseCase.LoginUser(user)
+	loginResponse, err := h.UseCase.LoginUser(user)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	c.SetCookie("access_token", tokenPair.AccessToken, 3600, "/", "localhost", false, true)
-	c.SetCookie("refresh_token", tokenPair.RefreshToken, 3600, "/", "localhost", false, true)
-	c.JSON(http.StatusOK, gin.H{"access_token": tokenPair.AccessToken, "refresh_token": tokenPair.RefreshToken})
+	c.JSON(http.StatusOK, gin.H{"access_token": loginResponse.AccessToken, "full_name": loginResponse.FullName})
 
 }
 
@@ -118,36 +110,5 @@ func (h *Handler) Logout(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-
-	c.SetCookie("access_token", "", -1, "/", "localhost", false, true)
-	c.SetCookie("refresh_token", "", -1, "/", "localhost", false, true)
-
 	c.JSON(http.StatusOK, gin.H{"message": "Пользователь успешно вышел из системы"})
-}
-
-// @BasePath /user/refreshtoken
-// @Summary Обновление токенов
-// @Description Обновление пары токенов
-// @Tags Пользователь
-// @Produce json
-// @Success 200 {object} map[string]string "Успешный ответ"
-// @Failure 400 {object} map[string]string "Неверный запрос"
-// @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
-// @Router /user/refreshtoken [post]
-func (h *Handler) RefreshToken(c *gin.Context) {
-	var refreshToken model.RefreshToken
-	if err := c.ShouldBindJSON(&refreshToken); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	tokenPair, err := h.UseCase.RefreshToken(refreshToken.RefreshToken)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	c.SetCookie("access_token", tokenPair.AccessToken, 3600, "/", "localhost", false, true)
-	c.SetCookie("refresh_token", tokenPair.RefreshToken, 3600, "/", "localhost", false, true)
-	c.JSON(http.StatusOK, gin.H{"access_token": tokenPair.AccessToken, "refresh_token": tokenPair.RefreshToken})
-
 }
